# lcu-record

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: by_lcu.rs  main.rs  win_utils.rs
src-tauri/src/lcu/: game_flow.rs  invoke_lcu.rs  mod.rs  process_info.rs  query_match.rs  request.rs
src/assets/champList/: index.tsx
src/interface/: GameFlow.ts  MatchDetail.d.ts  MatchInfo.d.ts  SummonerInfo.d.ts
src/pages/components/curPlayerItem/: index.tsx
src/pages/components/recordItem/: index.tsx
src/pages/curGame/: index.scss  index.tsx
src/pages/curSummoner/: index.scss  index.tsx
src/pages/rHeader/: index.css  index.tsx
src/pages/recordBoard/: index.scss  index.tsx
src/pages/recordList/: index.scss  index.tsx
src/utils/: curSummoner.ts  gameFlow.ts  getMatchInfo.ts  methods.ts
