[package]
name = "shadow"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-minimize", "window-close", "window-unmaximize", "window-start-dragging", "window-hide", "window-unminimize", "window-show", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.28.0"
base64 = "0.21.0"
lazy_static = "1.4.0"
chrono = "0.4.24"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
